# pydvma

./: .gitignore  .mkdocs_quickref.md  404.html  CHANGELOG.md  CITATION.cff  CLAUDE.md  CODE_STRUCTURE.md  DOCS_SETUP_SUMMARY.md  DOCUMENTATION.md  LICENSE  Logger_template.ipynb  MANIFEST.in  MKDOCSTRINGS_INTEGRATION.md  README.md  README_DOCS.md  TODO.md  TTT_logger_demo.ipynb  Untitled.ipynb  _pydvma_build.py  icon.pptx  index.html  interactive_tools.py  logger.yml  logger_env.yml  logger_environment.yaml  mkdocs.yml  objects.inv  pydvma_template.ipynb  pydvma_template_demos.ipynb  pyproject.toml  python_blas_threading_note.md  requirements-docs.txt  sample.ipynb  setup.py  sitemap.xml
.github/: FUNDING.yml
.github/workflows/: docs.yml  webui.yml
.ipynb_checkpoints/: Logger_template-checkpoint.ipynb  TTT_logger_demo-checkpoint.ipynb  pydvma_template-checkpoint.ipynb
api/acquisition/: index.html
api/analysis/: index.html
api/datastructure/: index.html
api/file/: index.html
api/gui/: index.html
api/modal/: index.html
api/plotting/: index.html
contributing/: index.html
contributing-docstrings/: index.html
data/examples/: README.md  ruler_grid_acc_3.mat
dev/: 2026-07-01-web-ui-design.md  2026-07-03-stage2-gui-design.md  2026-07-03-stage2-handoff.md  2026-07-04-stage2-plan1-handoff.md  2026-07-05-acquisition-hands-on-feedback.md  2026-07-05-hands-on-feedback.md  2026-07-07-round3-feedback.md  2026-07-07-round4-feedback.md  2026-07-07-round5-feedback.md  2026-07-08-round6-feedback.md  2026-07-08-windows-ni-recheck.md  2026-07-09-round7-feedback.md  2026-07-09-round8-feedback.md  2026-07-10-round10-jw-feedback.md  2026-07-10-round9-feedback.md  bridge_hw_check.py  iepe_accel_check.py  make_reference_dataset.py  make_webui_fixture.py  mode-shape-sketches.md
dev/mockups/: index.html  option-a-three-pane.html  option-b-workflow.html  option-c-rack.html  round2-bench.html
dev/plans/: 2026-07-02-web-ui-stages-0-1.md  2026-07-03-stage2-plan1-analysis-app.md  2026-07-05-analysis-card-redesign.md  2026-07-07-full-gui-replacement-plan.md  2026-07-07-waveA-fit-cal-export-brief.md  2026-07-07-waveB-serve-bridge-brief.md  2026-07-07-waveC-windows-checklist.md  2026-07-11-freq-navigator-design.md  2026-07-11-freq-navigator-plan.md
dev/prototypes/: README.md  scope.html
docs/: README.md  conf.py  contributing-docstrings.md  contributing.md  index.md  license.md
docs/_build/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
docs/_build/.doctrees/: environment.pickle  index.doctree
docs/_build/_sources/: index.rst.txt
docs/_build/_static/: documentation_options.js
docs/_build/doctrees/: environment.pickle  index.doctree  introduction.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  introduction.html  objects.inv  search.html  searchindex.js
docs/about/: support.md
docs/api/: acquisition.md  analysis.md  datastructure.md  file.md  gui.md  modal.md  plotting.md
docs/examples/: advanced.md  basic.md
docs/getting-started/: basic-usage.md  installation.md  quickstart.md
docs/user-guide/: acquisition.md  analysis.md  import-export.md  modal-analysis.md  plotting.md
docs/web-logger/: acquisition.md  analysis.md  calibration.md  dvma-format.md  export.md  index.md  live-monitoring.md  migration.md  modal-fitting.md  ni-hardware.md
examples/advanced/: index.html
examples/basic/: index.html
getting-started/basic-usage/: index.html
getting-started/installation/: index.html
getting-started/quickstart/: index.html
labs/: Logger_template.ipynb  M1_Notebook.ipynb  M1_Notebook_testing.ipynb  __init__.py  m1.py  mydata.npy
license/: index.html
lite/: jupyter-lite.json  jupyter_lite_config.json  service-worker.js
lite/consoles/: index.html
lite/content/: pydvma_analysis.ipynb
lite/edit/: index.html
lite/files/: pydvma_analysis.ipynb
lite/lab/: index.html
lite/notebooks/: index.html
lite/pypi/: PeakUtils-1.3.5-py3-none-any.whl  all.json  pydvma-1.5.0-py3-none-any.whl
lite/repl/: index.html
lite/tree/: index.html
paper/: README.md  paper.bib  paper.md
pydvma/: __init__.py  _ni_backend.py  _ni_device_specs.py  acquisition.py  analysis.py  container.py  datastructure.py  develop_sonogram_damping function.py  file.py  gui.py  gui_tk.py  icon.pptx  interactive_tools.py  logdata.py  logger_tester.py  logsettings.py  modal.py  options.py  oscilloscope.py  plotting.py  serve.py  settings.py  streams.py  testdata.py  utils.py
scripts/: stage_webui.py
search/: search_index.json
tests/: conftest.py  test_acquisition_guards.py  test_acquisition_hardware.py  test_acquisition_mock.py  test_acquisition_stress.py  test_acquisition_sync.py  test_analysis.py  test_container.py  test_datastructure.py  test_file.py  test_gui_logic.py  test_modal.py  test_ni_backend.py  test_ni_device_specs.py  test_oscilloscope_smoke.py  test_packaging.py  test_packaging_webui.py  test_plotting.py  test_serve_protocol.py  test_streams_channel_clamping.py  test_streams_ni_callback.py  test_webui_glue_bestmatch.py  test_webui_glue_damping.py  test_webui_glue_fit.py
tests/data/: reference_dataset_v140.npy
user-guide/acquisition/: index.html
user-guide/analysis/: index.html
user-guide/import-export/: index.html
user-guide/modal-analysis/: index.html
user-guide/plotting/: index.html
webui/: .gitignore  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts  vitest.config.ts
webui/e2e/: analysis.spec.ts  axis-nav.spec.ts  axis-scale.spec.ts  bridge.spec.ts  browser-acquire.spec.ts  calibrate.spec.ts  channel-relabel.spec.ts  dataset-dropdown.spec.ts  engine.spec.ts  export.spec.ts  files.spec.ts  fit.spec.ts  freq-nav.spec.ts  live.spec.ts  plot-gestures.spec.ts  resolution.spec.ts  shell.spec.ts  subpath.spec.ts  tf-channels.spec.ts  theme.spec.ts  tray.spec.ts
webui/scripts/: build-wheels.sh  check-pyodide-version.mjs  crosscheck-python.mjs  fetch-pyodide.sh
webui/src/: App.svelte  app.css  vite-env.d.ts
webui/tests/: format.test.ts  smoke.test.ts
(+173 files in other folders)
