[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "pydvma"
version = "1.5.0"          # keep in sync with pydvma/datastructure.py (enforced by tests/test_packaging.py)
description = "Python package for dynamics and vibration measurement and analysis"
readme = "README.md"
license = "BSD-3-Clause"
authors = [{ name = "Tore Butlin", email = "tb267@cam.ac.uk" }]
requires-python = ">=3.11"
# Base install is the pure-Python core: data structures, analysis,
# file I/O, matplotlib plotting. It must import and work with no Qt
# binding and no hardware driver present (runs under pyodide).
dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
    "peakutils",
]

[project.optional-dependencies]
# GUI (Logger / Oscilloscope / PlotData interactivity)
qt = ["qtpy", "PyQt5", "pyqtgraph", "seaborn"]
# acquisition backends
soundcard = ["sounddevice"]
ni = ["nidaqmx"]
# `pydvma serve` — the local WebSocket acquisition bridge for the
# browser UI. `websockets` is pure-Python with no transitive deps.
serve = ["websockets"]
full = ["pydvma[qt,soundcard,ni,serve]"]

[project.scripts]
# `pydvma serve` bridge; also runnable as `python -m pydvma.serve`.
pydvma-serve = "pydvma.serve:main"

[project.urls]
Homepage = "https://github.com/torebutlin/pydvma"

[tool.setuptools]
packages = ["pydvma"]

[tool.setuptools.package-data]
pydvma = ["*.png"]
# TODO (packaging, Wave-B follow-up): ship the built browser UI inside
# the wheel so `pydvma-serve` works from a pip install with no repo
# checkout. This needs a build step that stages `webui/dist` into the
# package tree (e.g. `pydvma/_webui/`) plus a package-data glob such as
# `pydvma = ["*.png", "_webui/**/*"]`. Out of scope for the bridge
# itself (decision #5): today `--ui-dir` (default <repo>/webui/dist)
# serves the UI, and an installed wheel without a build shows the
# bridge's no-UI help page.
