[build-system]
requires = ["setuptools>=77"]
# In-tree backend = setuptools plus the lean/fat webui split (see
# _pydvma_build.py). It only changes whether pydvma/_webui is packaged;
# everything else is stock setuptools.build_meta.
build-backend = "_pydvma_build"
backend-path = ["."]

[project]
name = "pydvma"
version = "1.5.0"          # keep in sync with pydvma/datastructure.py (enforced by tests/test_packaging.py)
description = "Python package for dynamics and vibration measurement and analysis"
readme = "README.md"
license = "BSD-3-Clause"
authors = [{ name = "Tore Butlin", email = "tb267@cam.ac.uk" }]
requires-python = ">=3.11"
# Base install is the pure-Python core: data structures, analysis,
# file I/O, matplotlib plotting. It must import and work with no Qt
# binding and no hardware driver present (runs under pyodide).
dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
    "peakutils",
]

[project.optional-dependencies]
# NOTE: the `qt` extra (qtpy/PyQt5/pyqtgraph/seaborn) was removed when
# the Qt desktop logger was retired — the browser web logger reached
# full parity (last Qt version: the `qt-final` git tag). `pip install
# pydvma[qt]` now errors on an unknown extra, which is the honest
# signal that the desktop GUI is gone; use `pydvma[serve]` +
# `pydvma-serve` instead (docs: web-logger/migration).
# acquisition backends
soundcard = ["sounddevice"]
ni = ["nidaqmx"]
# `pydvma serve` — the local WebSocket acquisition bridge for the
# browser UI. `websockets` is pure-Python with no transitive deps.
serve = ["websockets"]
full = ["pydvma[soundcard,ni,serve]"]

[project.scripts]
# `pydvma serve` bridge; also runnable as `python -m pydvma.serve`.
pydvma-serve = "pydvma.serve:main"

[project.urls]
Homepage = "https://github.com/torebutlin/pydvma"

[tool.setuptools]
packages = ["pydvma"]

[tool.setuptools.package-data]
# `_webui/**/*` ships the built browser UI (staged from `webui/dist` by
# `scripts/stage_webui.py`) inside the wheel, so `pip install
# pydvma[serve]` + `pydvma-serve` serves the app with no repo checkout.
# `pydvma.serve` resolves the UI in this order: explicit `--ui-dir` >
# `<repo>/webui/dist` (dev checkout) > this packaged `pydvma/_webui`
# (importlib.resources) > a no-UI help page.
#
# Two wheels, one glob:
#   * Fat wheel (local install / PyPI): `python -m build --wheel` (or
#     `pip wheel .`) after staging — `_webui` is present so the glob
#     bundles it. See docs/getting-started/installation.md for the flow.
#   * Lean engine wheel (vendored into pyodide by
#     webui/scripts/build-wheels.sh): built with `PYDVMA_LEAN_WHEEL=1`,
#     which the in-tree backend (`_pydvma_build.py`) honours by hiding
#     `_webui` for the build — the browser wheel stays tiny.
# The sdist never carries `_webui` (it is a gitignored build artefact);
# build the fat wheel directly from the staged tree, not from the sdist.
pydvma = ["*.png", "_webui/**/*"]
